# little_mat_calc

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
mat_calc/: Cargo.toml  mat.code-workspace
mat_calc/src/: eval.rs  interpreter.rs  lib.rs  main.rs  mat_wrap.rs  prelude.rs  splitting.rs  table.rs  token_pair.rs
mat_calc/src/eval/: config.rs  environment.rs  error.rs  frame.rs  object.rs
mat_calc/src/prelude/: constants.rs  list.rs  matrix.rs  misc.rs  numeric.rs
mat_calc_web/: Cargo.toml  index.html
mat_calc_web/src/: lib.rs
mat_macro/: Cargo.toml
mat_macro/src/: lib.rs
pkg/: mat_calc_web.d.ts  mat_calc_web.js  mat_calc_web_bg.wasm  mat_calc_web_bg.wasm.d.ts  package.json
src/: complex.rs  element.rs  error.rs  lib.rs  main.rs  matrix.rs  polynomial.rs  rational.rs
src/matrix/: alg.rs  concated_matrix.rs  data_matrix.rs  display.rs  eliminated_matrix.rs  linear_equation.rs  mat_block.rs  slice_matrix.rs  test.rs
src/matrix/alg/: det_mat.rs  eigen.rs  linear_equation.rs  normal.rs  schmidt.rs
