[package]
name = "mat_calc_web"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.0"
mat = { path = "../", features = ["i64_rational"] }
mat_calc = { path = "../mat_calc" }
mat_macro = { path = "../mat_macro" }
send_wrapper = "0.6.0"
js-sys = "^0.3.0"
indoc = "*"